--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">m-health</string>
+    <string name="app_name">Keluarga Sehat</string>
     <string name="create_account"><font color="#00ff00">text</font></string>
     <string name="email">Email</string>
     <string name="password">Password</string>
@@ -8,4 +8,11 @@
     <string name="register">Register</string>
     <string name="back_to_login">Kembali ke Login</string>
     <string name="nik">NIK</string>
+
+    <string-array name="tahun">
+        <item>2019</item>
+        <item>2018</item>
+        <item>2017</item>
+        <item>2016</item>
+    </string-array>
 </resources>
